# id2202-autograder

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml  diesel.toml  justfile  sailfish.toml
diesel/migrations/2025-09-18-110026_create_tables/: down.sql  up.sql
diesel/migrations/2026-06-12-110000_create_tables/: down.sql  up.sql
diesel/migrations/2026-06-14-112316_gitlab_sources/: down.sql  up.sql
example/: settings.toml
example/tests/: tests.toml
example/tests/hello/: config.toml  hello.test.toml
example/tests/hello-asm/: config.toml  genasm.in  genasm.test.toml
example/tests/hello-extra/: config.toml
example/tests/hello-extra/1-print/: config.toml  stdboth.test.toml  stderr-alt.test.toml  stderr.test.toml  stdin.test.toml  stdout-alt.test.toml  stdout-nowhitespace.test.toml  stdout.test.toml
example/tests/hello-extra/2-file/: config.toml  file-cpp.test.toml  file-md.cpp  file-md.md  file-md.test.toml
example/tests/hello-extra/3-code/: code0.test.toml  code10.test.toml  code15.test.toml  config.toml
example/tests/hello-file/: 1-hellotext.test.toml  2-hellodir.test.toml  3-hello-file-exec.test.toml  config.toml  hellodir.test.toml  hellotext.test.toml
misc/: test_github_request.sh
misc/example-solutions/: .gitignore  README.md
misc/example-solutions/hello/: .gitignore  Makefile  hello.ml
misc/example-solutions/hello-asm/: .gitignore  Makefile  helloasm.ml
misc/example-solutions/hello-extra/: .gitignore  Makefile  helloextra.ml
misc/example-solutions/hello-file/: .gitignore  Makefile  hello.txt
misc/example-solutions/hello-file/subdir/: world.txt
src/: config.rs  db.rs  error.rs  github.rs  gitlab.rs  lib.rs  notify.rs  podman.rs  reporting.rs  settings.rs  test_config.rs  utils.rs
src/config/: settings.rs  tests.rs
src/db/: conn.rs  models.rs  notify.rs  schema.rs
templates/: header.stpl
templates/route/: job_info.stpl
web/static/: test.html
web/static/script/: color-scheme.js
web/templates/: footer.stpl  header.stpl
web/templates/error/: message.stpl  unauthorized.stpl
web/templates/route/: index.stpl  submission.stpl
