[package]
name = "id2202_autograder"
version = "1.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9.2", features = ["parse", "serde"] }
serde_json = "1.0.143"
fern = "0.7.1"
log = "0.4"
chrono = "0.4.41"
actix-web = "4"
sailfish = "0.9.0"
clap = { version = "4.5", features = ["derive"] }
asserting = "0.9"
itertools = "0.14"
subprocess = "0.2.9"
signal-hook = "0.3.18"
derive_more = "2.0.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
nix = { version = "0.26.1", features = ["inotify", "poll"] }
diesel = { version = "2.2.12", features = ["postgres"] }
tokio = "1.47.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
dircpy = "0.3.19"
tempfile = "3.23.0"
json = "0.12.4"
mio = "1.1.0"
