[package]
name = "id2202_autograder"
version = "2.0.0-dev1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9.2", features = ["parse", "serde"] }
confique = { version = "0.4.0", features = ["toml"] }
serde_json = "1.0.143"
fern = "0.7.1"
log = "0.4"
chrono = "0.4.41"
actix-web = "4"
actix-web-static-files = { version = "4.1", features = ["static-files-03"] }
sailfish = "0.10.1"
clap = { version = "4.5", features = ["derive"] }
asserting = "0.9"
itertools = "0.14"
subprocess = "0.2.9"
signal-hook = "0.3.18"
derive_more = "2.0.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.10.1"
bs58 = "0.5.1"
reqwest = { version = "0.12.23", features = ["json"] }
diesel = { version = "2.2.12", features = ["postgres", "serde_json"] }
postgres = { version = "0.19.12" }
tokio = "1.47.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
dircpy = "0.3.19"
tempfile = "3.23.0"
json = "0.12.4"
mio = "1.1.0"
static-files = "0.3.1"
paste = "1.0.15"
scopeguard = "1.2"

[build-dependencies]
static-files = "0.3.1"
