[package]
name = "id2202_autograder"
version = "2.0.0-dev2"
edition = "2021"

[dependencies]
actix-web = "4.14.0"
actix-web-static-files = { version = "4.1.1", features = ["static-files-03"] }
asserting = "0.14.0"
bs58 = "0.5.1"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
confique = { version = "0.4.0", features = ["toml"] }
derive_more = "2.1.1"
diesel = { version = "2.3.10", features = ["postgres", "serde_json"] }
dircpy = "0.3.20"
fern = "0.7.1"
hex = "0.4.3"
hmac = "0.13.0"
itertools = "0.15.0"
json = "0.12.4"
log = "0.4.33"
mio = "1.2.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"
postgres = { version = "0.19.14" }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json", "form"] }
sailfish = "=0.11.1"
schemars = "1.2.1"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
signal-hook = "0.4.4"
static-files = "0.3.1"
subprocess = "1.1.0"
tempfile = "3.27.0"
tokio = "1.52.3"
toml = { version = "1.1.2", features = ["parse", "serde"] }
url = "2.5.8"
v_htmlescape = "0.17"

[build-dependencies]
static-files = "0.3.1"
